--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,45 +1,16 @@
 @import "./styles/variables";
 @import "./styles/mixins";
 
-body, html {
- font-family: $font-primary;
- background-color: $color-secondary;
- padding: $padding-sm;
+#root {
+  height: 100vh;
 }
 
-nav {
-  padding: $padding-sm;
-  margin: $margin-sm;
-  border-radius: $radius-5;
+.container {
+  @include flex-row;
+  height: 100%;
 }
 
-footer {
-  padding: $padding-sm;
-  margin: $margin-sm;
-}
-
-div {
-}
-
-section {
-  padding: $padding-sm;
-  margin: $margin-sm;
-  background-color: $color-primary;
-  border: none;
-  border-radius: $radius-5;
-}
-
-p {
-
-}
-
-h1, h2, h3, h4, h5, h6 {
-  text-align: center;
-}
-
-button {
-  border-radius: $radius-5;
-  padding: $padding-xs $padding-sm;
-  max-height: 50px;
-  border: none;
+.content {
+  @include flex-column;
+  flex: auto;
 }
