--- a/client/src/header/Header.scss
+++ b/client/src/header/Header.scss
@@ -1,6 +1,11 @@
 @import "../styles/variables";
 @import "../styles/mixins";
 
+header {
+    border: solid;
+    min-width: 200px;
+}
+
 header, nav{
     @include flex-column;
     align-items: center;
