Basic homepage layout styling.

--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -1,7 +1,8 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
-.wrapper {
+.home {
     @include flex-column;
-    @include center-around;
+    @include center-between;
+    flex: 1 0 100%;
 }
