--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -1,22 +1,10 @@
-@mixin flex-row {
+@mixin flex($direction, $wrap) {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: $direction;
+    flex-wrap: $wrap;
 }
 
-@mixin flex-column {
-    display: flex;
-    flex-direction: column;
-}
-
-@mixin center-around {
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-}
-
-@mixin center-between {
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
+@mixin align($justify, $align) {
+    justify-content: $justify;
+    align-items: $align;
 }
