--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -1,2 +1,7 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
+
+main {
+    @include flex(column, nowrap);
+    flex: 1 1 100%;
+}
