--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,8 +1,8 @@
 // * COLORS * //
-$color-primary: #ffffff;
-$color-secondary: #ffffff;
-$color-tertiary: #ffffff;
-$color-text: #000000;
+$bg-primary: rgba(30, 30, 30, 1);
+$bg-secondary: rgba(45, 45, 45, 1);
+$bg-tertiary: rgba(56, 56, 56, 1);
+$color-text: rgba(204, 204, 204, 1);
 
 // * TYPOGRAPHY * //
 $font-primary: 'Quicksand', sans-serif;
