--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -3,6 +3,8 @@ $bg-primary: rgba(30, 30, 30, 1);
 $bg-secondary: rgba(45, 45, 45, 1);
 $bg-tertiary: rgba(56, 56, 56, 1);
 $color-text: rgba(204, 204, 204, 1);
+$color-user: rgba(86, 130, 89, 1);
+$color-ai: rgba(103, 125, 183, 1);
 
 // * TYPOGRAPHY * //
 $font-primary: 'Quicksand', sans-serif;
