--- a/client/src/components/tabs/Tabs.scss
+++ b/client/src/components/tabs/Tabs.scss
@@ -3,6 +3,7 @@
 
 .tabs {
     @include flex(row, wrap);
+    @include align(flex-start, center);
     list-style-type: none;
     padding-left: 0px;
     margin: 0px;
@@ -13,4 +14,14 @@
     background-color: $bg-tertiary;
     padding: 15px;
     flex: 0 1 auto;
+}
+
+.addBtn {
+    height: 35px;
+    width: 35px;
+    background-color: $bg-tertiary;
+    border-color: $color-text;
+    border-radius: 20px;
+    color: $color-text;
+    margin-left: 10px;
 }
