--- a/client/src/components/chat/Chat.scss
+++ b/client/src/components/chat/Chat.scss
@@ -78,4 +78,5 @@ p, h1, h2, h3, h4, h5, h6, ul, li {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 75%;
 }
